<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".mainActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/food_item_one"
                android:id="@+id/zero"
                android:onClick="listButtonClicked"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="10dp"
                android:text="@string/A"
                android:textSize="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:id="@+id/textViewA" />


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="DAYS"
                    android:layout_gravity="clip_horizontal"
                    android:layout_marginTop="7dp"
                    android:id="@+id/textView1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="OLD"
                    android:layout_gravity="clip_horizontal"
                    android:id="@+id/textView2" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/food_item_two"
                android:id="@+id/one"
                android:onClick="listButtonClicked"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="10dp"
                android:text="@string/B"
                android:textSize="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:id="@+id/textViewB" />


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="DAYS"
                    android:layout_gravity="clip_horizontal"
                    android:layout_marginTop="7dp"
                    android:id="@+id/textView3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="OLD"
                    android:layout_gravity="clip_horizontal"
                    android:id="@+id/textView4" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/food_item_three"
                android:id="@+id/two"
                android:onClick="listButtonClicked"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="10dp"
                android:text="@string/C"
                android:textSize="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:id="@+id/textViewC" />


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="DAYS"
                    android:layout_gravity="clip_horizontal"
                    android:layout_marginTop="7dp"
                    android:id="@+id/textView5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="OLD"
                    android:layout_gravity="clip_horizontal"
                    android:id="@+id/textView6" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/food_item_four"
                android:id="@+id/three"
                android:onClick="listButtonClicked"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="10dp"
                android:text="@string/D"
                android:textSize="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:id="@+id/textViewD" />


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="DAYS"
                    android:layout_gravity="clip_horizontal"
                    android:layout_marginTop="7dp"
                    android:id="@+id/textView7" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="OLD"
                    android:layout_gravity="clip_horizontal"
                    android:id="@+id/textView8" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/food_item_five"
                android:id="@+id/four"
                android:onClick="listButtonClicked"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="10dp"
                android:text="@string/E"
                android:textSize="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:id="@+id/textViewE" />


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="DAYS"
                    android:layout_gravity="clip_horizontal"
                    android:layout_marginTop="7dp"
                    android:id="@+id/textView9" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="OLD"
                    android:layout_gravity="clip_horizontal"
                    android:id="@+id/textView10" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/food_item_six"
                android:id="@+id/five"
                android:onClick="listButtonClicked"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="10dp"
                android:text="@string/F"
                android:textSize="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:id="@+id/textViewF" />


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="DAYS"
                    android:layout_gravity="clip_horizontal"
                    android:layout_marginTop="7dp"
                    android:id="@+id/textView11" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="OLD"
                    android:layout_gravity="clip_horizontal"
                    android:id="@+id/textView12" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
